syntax = "proto3";

package native;

option go_package = "github.com/calmato/gran-book/proto";

import "common/common.proto";

// 認証情報
message AuthV1Response {
  string id = 1; // ユーザーID
  string username = 2; // ユーザー名
  common.Gender gender = 3; // 性別
  string email = 4; // メールアドレス
  string phone_number = 5; // 電話番号
  string thumbnail_url = 6; // サムネイルURL
  string self_introduction = 7; // 自己紹介
  string last_name = 8; // 姓
  string first_name = 9; // 名
  string last_name_kana = 10; // 姓(かな)
  string first_name_kana = 11; // 名(かな)
  string postal_code = 12; // 郵便番号
  string prefecture = 13; // 都道府県
  string city = 14; // 市区町村
  string address_line1 = 15; // 町名,番地
  string address_line2 = 16; // マンション・ビル名,号室
  string created_at = 17; // 作成日時
  string updated_at = 18; // 更新日時
}

// サムネイルURL
message AuthV1ThumbnailResponse {
  string thumbnail_url = 1; // サムネイルURL
}
